[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Buildings/Building.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/Buildings/Weapon.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=14]
extents = Vector3( 1, 0.25, 1 )

[sub_resource type="BoxShape" id=15]
extents = Vector3( 0.8, 0.25, 0.8 )

[sub_resource type="SphereMesh" id=16]
height = 0.6

[sub_resource type="Shader" id=8]
code = "/*
	走査シェーダー by あるる（きのもと 結衣）
	Scanning Shader by Yui Kinomoto @arlez80

	MIT License
*/

shader_type spatial;
render_mode unshaded;

const float PI = 3.1415926535;

uniform vec3 shift = vec3( 0.0, 0.0, 0.0 );
uniform vec3 time_shift_scale = vec3( 0.0, 0.0, 0.0 );
uniform vec4 scan_color : hint_color = vec4( 0.0, 1.0, 0.3, 1.0 );
uniform float scan_line_width : hint_range( 0.0, 1.0 ) = 0.1;
uniform float scan_line_size = 0.05;

varying vec3 local_vertex;

float get_ratio_scan_line( float p )
{
	return max(
		-sin( mod( p, scan_line_size ) / scan_line_size * PI ) + scan_line_width
	,	0.0
	) / scan_line_width;
}

void vertex( )
{
	local_vertex = VERTEX + shift + time_shift_scale * TIME;
}

void fragment( )
{
	float v = clamp(
		get_ratio_scan_line( local_vertex.x )
	+	get_ratio_scan_line( local_vertex.y )
	+	get_ratio_scan_line( local_vertex.z )
	,	0.0
	,	1.0
	);

	ALBEDO = scan_color.rgb;
	ALPHA = scan_color.a * v;
}
"

[sub_resource type="ShaderMaterial" id=17]
shader = SubResource( 8 )
shader_param/shift = Vector3( 0, 0, 0 )
shader_param/time_shift_scale = Vector3( 0.3, 0.2, 0.3 )
shader_param/scan_color = Color( 0.078431, 1, 1, 1 )
shader_param/scan_line_width = 0.5
shader_param/scan_line_size = 0.3

[sub_resource type="BoxShape" id=13]
extents = Vector3( 0.9, 0.25, 0.9 )

[node name="Weapon" instance=ExtResource( 1 )]
script = ExtResource( 3 )
accepted_selector_classes = PoolStringArray( "Cell" )

[node name="CollisionShape" parent="." index="0"]
shape = SubResource( 14 )

[node name="CollisionShape" parent="CellDetection" index="0"]
shape = SubResource( 15 )

[node name="VisualSelector" parent="." index="3"]
mesh = SubResource( 16 )
material/0 = SubResource( 17 )

[node name="ShootPositions" type="Spatial" parent="." index="4"]

[node name="EnergyDetection" type="Area" parent="." index="5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0.75, -1 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="EnergyDetection" index="0"]
shape = SubResource( 13 )

[node name="TimerCooldown" type="Timer" parent="." index="6"]
process_mode = 0
one_shot = true
